<resources>
    <string name="app_name">Bloodshare</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="login"><b>Login</b></string>
    <string name="or"><b>OR</b></string>
    <string name="confb">CONNECT WITH FACEBOOK</string>
    <string name="reg">Register</string>
    <string name="bloodshare">bloodsharelogo</string>
    <string name="doesn_t_have_account">doesn\'t have account ?</string>
    <string name="almostthere">Almost There</string>
    <string name="thank">Thank you for registering with us. One more\n step, you need to check your email\n to activate your account</string>
    <string name="verifybtn">Verify</string>
    <string name="verify">Verify your Account</string>
    <string name="sendemail">We have send verification code to your email</string>
    <string name="enterkode">enter verification code here...</string>
    <string name="send">Send</string>
    <string name="doesn_t_get_the_code">doesn\'t get the code ?</string>
    <string name="resend"><b>Resend</b></string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="genderm">Male</string>
    <string name="genderf">Female</string>
    <string name="blood">Blood Type       </string>
    <string name="rhesus">Reshus</string>
    <string name="retype">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="job">Job</string>
    <string name="address">Home Address</string>
    <string name="defaul">Default Location</string>
    <string name="term">Agree with Terms and Conditions</string>
    <string name="nama">Divian Ajie Permana</string>
    <string name="goldar">Blood Type : A</string>
    <string name="tujulima">75</string>
    <string name="seratus">100</string>
    <string name="tigatiga">335</string>
    <string name="give">BLOOD GIVE</string>
    <string name="rcv">BLOOD RECEIVE</string>
    <string name="thx">THANKS</string>\
    <string name="imgSearch">Search Donor</string>
    <string name="imgNeeded">Blood Needed</string>
    <string name="imgMess">Message</string>
    <string name="imgHistory">Donor History</string>
    <string name="txtSearch">Search donor near you</string>
    <string name="txtNeeded">4 Users Need Blood</string>
    <string name="txtMess">5 New Messages</string>
    <string name="txtHistory">5 Gives, 2 Receives</string>

</resources>
