<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    android:paddingLeft="@dimen/dimen30"
    android:paddingRight="@dimen/dimen30"
    android:orientation="vertical"
    tools:context=".MainActivity">
    
    <ImageView
        android:id="@+id/imgLogoAwal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bloodshare"
        android:src="@drawable/ic_welcome_logo"
        android:layout_marginTop="@dimen/dimen100"/>

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen16"
        android:backgroundTint="@android:color/white"
        android:fontFamily="sans-serif-light"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType=""
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/font18" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen16"
        android:backgroundTint="@android:color/white"
        android:fontFamily="sans-serif-light"
        android:hint="@string/pass"
        android:importantForAutofill="no"
        android:inputType=""
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/font18" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen18"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen22"
        android:layout_marginBottom="@dimen/dimen10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/btnLinkFB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen18"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_welcome_fb_login"
        android:fontFamily="sans-serif-black"
        android:text="@string/confb"
        android:textColor="@android:color/white" />
        <LinearLayout
            android:layout_marginTop="@dimen/dimen22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/doesn_t_have_account"
                android:textColor="@android:color/white" />

            <Button
                android:layout_width="@dimen/dimen60"
                android:layout_height="match_parent"
                android:background="@drawable/buttontxt"
                android:fontFamily="sans-serif-black"
                android:text="@string/reg"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>

</LinearLayout>